force-app/main/default/objects/PlantMaterial__c/PlantMaterial__c.object-meta.xml
<CustomObject>
    <label>Plant Material</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>PM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>