force-app/main/default/objects/PlantMaterial__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Plant Materials</relationshipLabel>
    <relationshipName>PlantMaterials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>