force-app/main/default/objects/PlantMaterial__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>PlantMaterials</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>