force-app/main/default/objects/PlantMaterial__c/fields/ProcessingDuration__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDuration__c</fullName>
    <label>Processing Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>