force-app/main/default/objects/PlantMaterial__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <label>Tolerance %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>